<resources>
    <string name="app_name">Conversor de Moedas</string>
    <string name="userInputHint">Usuário / E-mail</string>
    <string name="passwordInputHint">Senha</string>
    <string name="loginButtonText">Entrar</string>
    <string name="loginWithFbButtonText">Entrar com Facebook</string>
    <string name="loginWithTwitterButtonText">Entrar com Twitter</string>
    <string name="loginWithGoogleButtonText">Entrar com Google</string>
    <string name="convertButtonText">Converter</string>
    <string name="newCurrencyInputHint">Valor Convertido</string>
    <string name="newCurrencyHint">Moeda Desejada</string>
    <string name="oldCurrencyInputHint">Valor</string>
    <string name="oldCurrencyHint">Moeda de Origem</string>
    <string name="historyButtonText">Histórico</string>
</resources>
