<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:id="@+id/rootView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".view.ConversionActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

        <RelativeLayout
                android:id="@+id/oldCurrencySelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3.5dp"
                android:paddingEnd="3.5dp">
            <TextView
                    android:id="@+id/oldCurrencyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Moeda de Origem"
                    android:textColor="@color/darkText2" />
            <TextView
                    android:id="@+id/oldCurrency"
                    android:layout_below="@+id/oldCurrencyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="1dp"
                    android:textSize="17sp"
                    android:layout_toStartOf="@id/oldCurrencyChangeIcon"
                    android:text="USD"
                    android:textColor="@color/darkText1" />

            <ImageView
                    android:id="@+id/oldCurrencyChangeIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/oldCurrencyTitle"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_arrow_down"
                    android:padding="5dp" />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2.5dp"
                    android:background="@color/darkText2"
                    android:layout_below="@id/oldCurrency" />

        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldCurrencyInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/darkText2">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldCurrencyInput"
                    android:hint="@string/oldCurrencyInputHint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/darkText1"
                    android:textSize="18sp"
                    android:focusedByDefault="true"
                    android:imeOptions="actionDone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/darkText2" tools:ignore="UnusedAttribute"/>
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
                android:id="@+id/newCurrencySelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:paddingStart="3.5dp"
                android:paddingEnd="3.5dp">
            <TextView
                    android:id="@+id/newCurrencyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Moeda Desejada"
                    android:textColor="@color/darkText2" />
            <TextView
                    android:id="@+id/newCurrency"
                    android:layout_below="@+id/newCurrencyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="1dp"
                    android:textSize="17sp"
                    android:layout_toStartOf="@id/newCurrencyChangeIcon"
                    android:text="USD"
                    android:textColor="@color/darkText1" />

            <ImageView
                    android:id="@+id/newCurrencyChangeIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/newCurrencyTitle"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_arrow_down"
                    android:padding="5dp" />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2.5dp"
                    android:background="@color/darkText2"
                    android:layout_below="@id/newCurrency" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newCurrencyInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/darkText2">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newCurrencyInput"
                    android:hint="@string/newCurrencyInputHint"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:textColor="@color/darkText1"
                    android:textSize="18sp"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/darkText2" tools:ignore="UnusedAttribute"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/convertButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/convertButtonText"
                android:textSize="16sp"
                android:background="@drawable/button_ruby"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"/>


        <Button
                android:id="@+id/historyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/historyButtonText"
                android:textSize="16sp"
                android:background="@drawable/button_pale_gold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"/>

    </LinearLayout>

</ScrollView>